src/commands/snapshots/csx__commands__exec__tests__sample_algorithm_lens.sh.snap
---
source: src/commands/exec.rs
expression: "fs::read_to_string(component_sh_path).unwrap()"
---
#!/bin/bash
# init
dfx canister  call sample_algorithm_lens init_in '(variant { "LocalDevelopment" }, record {
                refueling_interval = 86400: nat64;
                vault_intial_supply = 1000000000000: nat;
                indexer = record { 
                    initial_supply = 0: nat;
                    refueling_amount = 1000000000000: nat;
                    refueling_threshold = 500000000000: nat;
                };
                db = record { 
                    initial_supply = 1000000000: nat;
                    refueling_amount = 1000000000000: nat;
                    refueling_threshold = 500000000000: nat;
                };
                proxy = record { 
                    initial_supply = 300000000000: nat;
                    refueling_amount = 100000000000: nat;
                    refueling_threshold = 100000000000: nat;
                };
        })' --with-cycles 1301000000000 --wallet $(dfx identity get-wallet )

