src/commands/snapshots/csx__commands__exec__tests__sample_relayer.sh.snap
---
source: src/commands/exec.rs
expression: "fs::read_to_string(component_sh_path).unwrap()"
---
#!/bin/bash
# init
dfx canister  call sample_relayer init_in '(variant { "LocalDevelopment" }, record {
                refueling_interval = 86400: nat64;
                vault_intial_supply = 1000000000000: nat;
                indexer = record { 
                    initial_supply = 0: nat;
                    refueling_amount = 1000000000000: nat;
                    refueling_threshold = 500000000000: nat;
                };
                db = record { 
                    initial_supply = 1500000000000: nat;
                    refueling_amount = 1000000000000: nat;
                    refueling_threshold = 500000000000: nat;
                };
                proxy = record { 
                    initial_supply = 300000000000: nat;
                    refueling_amount = 100000000000: nat;
                    refueling_threshold = 100000000000: nat;
                };
        })' --with-cycles 2800000000000 --wallet $(dfx identity get-wallet )
# setup
dfx canister  call sample_relayer setup "(
    \"0539a0EF8e5E60891fFf0958A059E049e43020d9\",
    record {
        url = \"https://polygon-mumbai.infura.io/v3/\";
        from = null;
        chain_id = 80001;
        env = variant { LocalDevelopment };
    },
    \"$(dfx canister  id sample_snapshot_indexer_evm)\",
    
)"
# set_task
dfx canister  call sample_relayer set_task_with_rounded '(3600, 0, false)'

