src/commands/snapshots/csx__commands__exec__tests__sample_snapshot_indexer_icp.sh.snap
---
source: src/commands/exec.rs
expression: "fs::read_to_string(component_sh_path).unwrap()"
---
#!/bin/bash
# init
dfx canister  call sample_snapshot_indexer_icp init_in '(variant { "LocalDevelopment" }, record {
                refueling_interval = 86400: nat64;
                vault_intial_supply = 1000000000000: nat;
                indexer = record { 
                    initial_supply = 0: nat;
                    refueling_amount = 1000000000000: nat;
                    refueling_threshold = 500000000000: nat;
                };
                db = record { 
                    initial_supply = 1500000000000: nat;
                    refueling_amount = 1000000000000: nat;
                    refueling_threshold = 500000000000: nat;
                };
                proxy = record { 
                    initial_supply = 300000000000: nat;
                    refueling_amount = 100000000000: nat;
                    refueling_threshold = 100000000000: nat;
                };
        })' --with-cycles 2800000000000 --wallet $(dfx identity get-wallet )
# setup
dfx canister  call sample_snapshot_indexer_icp setup "(
    \"$(dfx canister  id sample_snapshot_indexer_evm)\"
)"
# set_task
dfx canister  call sample_snapshot_indexer_icp set_task '(3600, 5)'

