src/commands/snapshots/csx__commands__exec__tests__snapshot_entrypoint_sh.snap
---
source: src/commands/exec.rs
expression: entrypoint_sh(project_ids)
---
#!/bin/bash
script_dir=$(dirname "$(readlink -f "$0")")

. "$script_dir/utils.sh"

set -e -o pipefail
trap 'on_error $BASH_SOURCE $LINENO "$BASH_COMMAND" "$@"' ERR


echo "Run script for 'sample_snapshot'"
. "$script_dir/components/sample_snapshot.sh"


echo "Run script for 'sample_lens'"
. "$script_dir/components/sample_lens.sh"


echo "Run script for 'sample_relayer'"
. "$script_dir/components/sample_relayer.sh"


