src/commands/snapshots/csx__commands__exec__tests__snapshot_utils_sh.snap
---
source: src/commands/exec.rs
expression: utils_sh()
---
#!/bin/bash

function on_error()
{
    status=$?
    script=$1
    line=$2
    command=$3

    {
        # echo "Status: $status"
        echo "occured on $script [Line $line]"
        echo "command: $command"
    } 1>&2
}

